@@ -141,7 +141,7 @@ L<Image::Keyboard::Button>.
 
 =head1 REPOSITORY
 
-L<https://github.com/tupinek/Image-Keyboard>
+L<https://github.com/michal-josef-spacek/Image-Keyboard>
 
 =head1 AUTHOR
 
