@@ -36,7 +36,7 @@ requires:
   perl: 5.6.2
 resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=Image-Keyboard
-  homepage: https://github.com/tupinek/Image-Keyboard
+  homepage: https://github.com/michal-josef-spacek/Image-Keyboard
   license: http://opensource.org/licenses/bsd-license.php
-  repository: git://github.com/tupinek/Image-Keyboard
+  repository: git://github.com/michal-josef-spacek/Image-Keyboard
 version: '0.04'
