@@ -18,8 +18,8 @@ requires 'List::MoreUtils' => 0;
 requires 'perl' => '5.6.2';
 resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 	'?Name=Image-Keyboard';
-resources 'homepage' => 'https://github.com/tupinek/Image-Keyboard';
-resources 'repository' => 'git://github.com/tupinek/Image-Keyboard';
+resources 'homepage' => 'https://github.com/michal-josef-spacek/Image-Keyboard';
+resources 'repository' => 'git://github.com/michal-josef-spacek/Image-Keyboard';
 test_requires 'English' => 0;
 test_requires 'File::Object' => 0.05;
 test_requires 'Test::More' => 0;
